--- a/cava/config
+++ b/cava/config
@@ -138,15 +138,15 @@ gradient_color_8 = '#200040'
 
 # Percentage value for integral smoothing. Takes values from 0 - 100.
 # Higher values means smoother, but less precise. 0 to disable.
-integral = 50
+integral = 40
 
 # Disables or enables the so-called "Monstercat smoothing" with or without "waves". Set to 0 to disable.
 monstercat = 1
-waves = 0
+waves = 1
 
 # Set gravity percentage for "drop off". Higher values means bars will drop faster.
 # Accepts only non-negative values. 50 means half gravity, 200 means double. Set to 0 to disable "drop off".
-gravity = 60
+gravity = 40
 
 
 # In bar height, bars that would have been lower that this will not be drawn.
@@ -158,8 +158,8 @@ gravity = 60
 # This one is tricky. You can have as much keys as you want.
 # Remember to uncomment more then one key! More keys = more precision.
 # Look at readme.md on github for further explanations and examples.
-;1 = 4 # bass
-;2 = 1
-;3 = 3 # midtone
-;4 = 1
-;5 = 5 # treble
+1 = 4 # bass
+2 = 1
+3 = 3 # midtone
+4 = 1
+5 = 5 # treble
