--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -9,6 +9,7 @@ $topBar = waybar
 $launcher = bemenu-run
 
 # Startup
+exec-once = dbus-update-activation-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = light -I
 exec-once = gentoo-pipewire-launcher
 exec-once = $topBar
@@ -42,8 +43,8 @@ general {
     border_size = 2
 
     # Window border
-    col.active_border = rgb(5a0fa6)
-    col.inactive_border = rgba(595959aa)
+    col.active_border =	rgb(5a0fa6)    
+	col.inactive_border = rgba(595959aa)
 
     # Layout
     layout = dwindle
