--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -4,7 +4,7 @@
 
 # Variables
 $mainMod = SUPER
-$term = alacritty
+$term = kitty
 $topBar = waybar
 $launcher = bemenu-run
 
@@ -112,7 +112,7 @@ bind = SHIFT, XF86AudioLowerVolume, exec, pactl set-source-volume @DEFAULT_SOURC
 
 # Togle Audio | Mic
 bind = ,XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind = ,XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
+bind = $mainMod,XF86AudioMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 # Reloads
 bind = $mainMod SHIFT, w, exec, killall $topBar && $topBar
