--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,103 +1,107 @@
-#
-# Put an cool ascii art here XD
-#
-
 # Variables
-$mainMod = SUPER
-$term = kitty
-$topBar = waybar
-$launcher = bemenu-run
+$mod 					= SUPER
+$term					= kitty
+$top_bar 				= waybar
+$launcher				= bemenu-run
+$lock_screen			= swaylock --daemonize --fade-in 5 --screenshots --effect-blur 3x1 --indicator --clock --inside-color 5a0fa6 --inside-clear-color 5a0fa6 --layout-bg-color 5a0fa6 --key-hl-color 5a0fa6 --text-color ffffff --text-clear-color ffffff --ring-color 000000 --ring-clear-color 000000
+$active_border_col		= rgb(5a0fa6) rgb(400180) rgb(cc121e) rgb(ad0a15)
+$inactive_border_col	= rgb(595959)
 
 # Startup
 exec-once = dbus-update-activation-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = light -I
 exec-once = gentoo-pipewire-launcher
-exec-once = $topBar
+exec-once = $top_bar
 exec-once = ~/.config/hypr/hyprpaper_cli
+exec-once = ~/.config/hypr/animate_border "$active_border_col"
 
 # Monitor
 monitor=,preferred,auto,1
 
 # Input
 input {
-    kb_layout = br
-    kb_variant = abnt2
-    kb_model =
-    kb_options =
-    kb_rules =
-
-    follow_mouse = 1
-
-    touchpad {
-        natural_scroll = no
-    }
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    kb_layout 		= br
+    kb_variant		= abnt2
+    follow_mouse 	= 1
 }
 
 # General
 general {
     # Gaps
-    gaps_in = 5
-    gaps_out = 3
-    border_size = 2
+    gaps_in				= 5
+    gaps_out			= 3
+    border_size			= 2
 
     # Window border
-    col.active_border =	rgb(5a0fa6)    
-	col.inactive_border = rgba(595959aa)
+    col.active_border	= $active_border_col	
+	col.inactive_border	= $inactive_border_col 
 
     # Layout
-    layout = dwindle
+    layout 				= dwindle
 }
 
 # Decoration
 decoration {
-
     # Border rounding
-    rounding = 7
-    multisample_edges = true
+    rounding 				= 7
+    multisample_edges 		= true
 
     # Blur
-    blur_size = 0
-    blur_passes = 1
-    blur_new_optimizations = on
+	blur 					= false
+    blur_size 				= 5
+    blur_passes 			= 1
+    blur_new_optimizations 	= on
 
     # Shadows
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    drop_shadow 			= yes
+    shadow_range 			= 4
+    shadow_render_power 	= 3
+    col.shadow 				= rgba(1a1a1aee)
 }
+
+# Blur waybar
+blurls = waybar
 
 # Animations
 animations {
-    enabled = no
+	# Window: open, close, move
+    animation = windowsIn, 1, 4, default, popin 80%
+    animation = windowsOut, 1, 4, default, popin 30%
+	animation = windowsMove, 1, 5, default, slide
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+	# Fade: in, out
+    animation = fadeIn, 1, 10, default
+	animation = fadeOut, 1, 7, default
 
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+	# Border
+    animation = border, 1, 30, default
+
+	# Workspaces
+    animation = workspaces, 1, 3, default, slide
 }
 
 dwindle {
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = yes # you probably want this
+    pseudotile			= yes
+    preserve_split 		= yes
+	force_split			= 2
+	no_gaps_when_only 	= false
 }
 
+# Lock screen
+bindl	= , switch:Lid Switch, exec, $lock_screen
+bind	= $mod SHIFT, l, exec, $lock_screen
+
 # Main Keybindings
-bind = $mainMod, T, exec, $term
-bind = $mainMod, Return, exec, $launcher
-bind = $mainMod SHIFT, Q, killactive
-bind = $mainMod SHIFT, E, exit
+bind = $mod, T, exec, $term
+bind = $mod, Return, exec, $launcher
+bind = $mod SHIFT, Q, killactive
+bind = $mod SHIFT, E, exit
 
 # Control screen brightness
 bind = ,XF86MonBrightnessUp,   exec, light -A 10 | light -O
 bind = ,XF86MonBrightnessDown, exec, light -U 10 | light -O
 
-# Music
+# Music (script)
 bind = ,XF86AudioPlay, exec, music pause
 bind = ,XF86AudioNext, exec, music advance
 bind = ,XF86AudioPrev, exec, music return
@@ -112,50 +116,72 @@ bind = SHIFT, XF86AudioLowerVolume, exec, pactl set-source-volume @DEFAULT_SOURC
 
 # Togle Audio | Mic
 bind = ,XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind = $mainMod,XF86AudioMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
+bind = $mod,XF86AudioMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 # Reloads
-bind = $mainMod SHIFT, w, exec, killall $topBar && $topBar
-bind = $mainMod SHIFT, w, exec, ~/.config/hypr/hyprpaper_cli clipboard
+bind = $mod SHIFT, w, exec, killall $top_bar && $top_bar
+bind = $mod SHIFT, w, exec, ~/.config/hypr/hyprpaper_cli clipboard
+bind = $mod SHIFT, w, exec, ~/.config/hypr/animate_border "$active_border_col"
 
 # Screenshot
-bind = $mainMod, p, exec, grim - | wl-copy -t image/png
-bind = $mainMod SHIFT, p, exec, grim -g "$(slurp)" - | wl-copy -t image/png
+bind = $mod, p, exec, grim - | wl-copy -t image/png
+bind = $mod SHIFT, p, exec, grim -g "$(slurp)" - | wl-copy -t image/png
+
+# Toggle Floating
+bind = $mod SHIFT, space, togglefloating, active
+
+# Move window
+bind = $mod SHIFT, left, movewindow, l
+bind = $mod SHIFT, right, movewindow, r
+bind = $mod SHIFT, up, movewindow, u
+bind = $mod SHIFT, down, movewindow, d
+
+# Resize mode
+bind = $mod, r, submap, resize
+submap = resize
+
+binde = , right, resizeactive, 10 0
+binde = , left, resizeactive, -10 0
+binde = , up, resizeactive, 0 -10
+binde = , down, resizeactive, 0 10
+
+bind = , escape, submap, reset
+submap = reset
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mod, left, movefocus, l
+bind = $mod, right, movefocus, r
+bind = $mod, up, movefocus, u
+bind = $mod, down, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+bind = $mod, 1, workspace, 1
+bind = $mod, 2, workspace, 2
+bind = $mod, 3, workspace, 3
+bind = $mod, 4, workspace, 4
+bind = $mod, 5, workspace, 5
+bind = $mod, 6, workspace, 6
+bind = $mod, 7, workspace, 7
+bind = $mod, 8, workspace, 8
+bind = $mod, 9, workspace, 9
+bind = $mod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $mod SHIFT, 1, movetoworkspace, 1
+bind = $mod SHIFT, 2, movetoworkspace, 2
+bind = $mod SHIFT, 3, movetoworkspace, 3
+bind = $mod SHIFT, 4, movetoworkspace, 4
+bind = $mod SHIFT, 5, movetoworkspace, 5
+bind = $mod SHIFT, 6, movetoworkspace, 6
+bind = $mod SHIFT, 7, movetoworkspace, 7
+bind = $mod SHIFT, 8, movetoworkspace, 8
+bind = $mod SHIFT, 9, movetoworkspace, 9
+bind = $mod SHIFT, 0, movetoworkspace, 10
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = $mod, mouse_down, workspace, e+1
+bind = $mod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+bindm = $mod, mouse:272, movewindow
+bindm = $mod, mouse:273, resizewindow
