--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,6 +4,10 @@ confirm_os_window_close 0
 # BG Opacity
 background_opacity 0.1
 
+# Font
+font_family Noto Mono Nerd Font Complete
+font_size 12.0
+
 # Background
 foreground #f8f8f2
 background #0c0d17
