--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,9 +12,9 @@ exec-once = dbus-update-activation-environment WAYLAND_DISPLAY XDG_CURRENT_DESKT
 exec-once = light -I
 exec-once = gentoo-pipewire-launcher
 exec-once = $top_bar
-exec-once = ~/.config/hypr/hyprpaper_cli
+exec-once = ~/.config/hypr/wallpaper_cli
 exec-once = ~/.config/hypr/animate_border "$active_border_col"
-
+exec-once = ~/.config/hypr/audio
 # Monitor
 monitor=,preferred,auto,1
 
@@ -47,7 +47,7 @@ decoration {
     multisample_edges 		= true
 
     # Blur
-	blur 					= false
+	blur 					= true
     blur_size 				= 5
     blur_passes 			= 1
     blur_new_optimizations 	= on
@@ -120,7 +120,7 @@ bind = $mod,XF86AudioMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 # Reloads
 bind = $mod SHIFT, w, exec, killall $top_bar && $top_bar
-bind = $mod SHIFT, w, exec, ~/.config/hypr/hyprpaper_cli clipboard
+bind = $mod SHIFT, w, exec, ~/.config/hypr/wallpaper_cli clipboard
 bind = $mod SHIFT, w, exec, ~/.config/hypr/animate_border "$active_border_col"
 
 # Screenshot
