--- a/waybar/config
+++ b/waybar/config
@@ -4,31 +4,52 @@
     "position": "top", // (top|bottom|left|right)
 
     // Size
-    "height": 15, // Waybar height (to be removed for auto height)
+    // "height": 15, // Waybar height (to be removed for auto height)
     // "width": 1280, // Waybar width
     "spacing": 4, // Gaps between modules (4px)
-
 
     // Modules left
     "modules-left": ["wlr/workspaces"],
 
     // Modules center
-    //"modules-center": [""],
+    "modules-center": ["custom/music"],
 
     // Modules right
-    "modules-right": ["custom/bar"],
+    "modules-right": ["custom/clock", "custom/calendar", "custom/battery", "custom/temperature"],
 
     // *MODULES CONFIG* \\
 
-    // Custom/bar | Runs my custom bar.sh script
-    "custom/bar": {
-		"exec": "/home/waltz/.config/waybar/bar.sh",
+    // Custom/bar: Clock
+    "custom/clock": {
+		"exec": "/home/waltz/.config/waybar/bar.sh clock",
     },
 
-    //  Wlroots workspaces
-    "wlr/workspaces": {
-		 "active-only": "false",
-	     "on-click": "activate",
-         },
-     },
+    // Custom/bar: Calendar
+    "custom/calendar": {
+		"exec": "/home/waltz/.config/waybar/bar.sh calendar",
+    },
+
+    // Custom/bar: Battery
+    "custom/battery": {
+		"exec": "/home/waltz/.config/waybar/bar.sh battery",
+    },
+
+    // Custom/bar: Temperature
+    "custom/temperature": {
+		"exec": "/home/waltz/.config/waybar/bar.sh temperature",
+    },
+
+    // Custom/bar: Music
+	"custom/music": {
+		"exec": "/home/waltz/.config/waybar/bar.sh music",
+		"on-click": "music pause",
+    },
+
+
+	//  Wlroots workspaces
+	"wlr/workspaces": {
+		"active-only": "false",
+		"on-click": "activate",
+    	},
+	},
 }
