--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -100,25 +100,26 @@ bind = $mod SHIFT, Q, killactive
 bind = $mod SHIFT, E, exit
 
 # Control screen brightness
-bind = ,XF86MonBrightnessUp,   exec, light -A 10 | light -O
-bind = ,XF86MonBrightnessDown, exec, light -U 10 | light -O
+bind = ,XF86MonBrightnessUp,   exec, light -A 10 && light -O && notify-send -t 600 "Bright: $(light -G)"
+bind = ,XF86MonBrightnessDown, exec, light -U 10 && light -O && notify-send -t 600 "Bright: $(light -G)"
 
 # Music (script)
+bind = $mod,XF86AudioPlay, exec, notify-send -t 600 "$(music info)"
 bind = ,XF86AudioPlay, exec, music pause
 bind = ,XF86AudioNext, exec, music advance
 bind = ,XF86AudioPrev, exec, music return
 
 # Volume
-bind = ,XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
-bind = ,XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+bind = ,XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5% && notify-send -t 600 "Audio: $(pactl get-sink-volume @DEFAULT_SINK@ | awk '{print $5}')"
+bind = ,XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5% && notify-send -t 600 "Audio: $(pactl get-sink-volume @DEFAULT_SINK@ | awk '{print $5}')"
 
 # Microphone volume
-bind = SHIFT, XF86AudioRaiseVolume, exec, pactl set-source-volume @DEFAULT_SOURCE@ +5%
-bind = SHIFT, XF86AudioLowerVolume, exec, pactl set-source-volume @DEFAULT_SOURCE@ -5%
+bind = $mod, XF86AudioRaiseVolume, exec, pactl set-source-volume @DEFAULT_SOURCE@ +5% && notify-send -t 600 "Microphone: $(pactl get-source-volume @DEFAULT_SOURCE@ | awk '{print $5}')"
+bind = $mod, XF86AudioLowerVolume, exec, pactl set-source-volume @DEFAULT_SOURCE@ -5% && notify-send -t 600 "Microphone: $(pactl get-source-volume @DEFAULT_SOURCE@ | awk '{print $5}')"
 
 # Togle Audio | Mic
-bind = ,XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind = $mod,XF86AudioMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
+bind = ,XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle && notify-send -t 600 "Audio muted: $(pactl get-sink-mute @DEFAULT_SINK@ | awk '{print $2}')"
+bind = $mod,XF86AudioMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle && notify-send -t 600 "Microphone muted: $(pactl get-source-mute @DEFAULT_SOURCE@ | awk '{print $2}')"
 
 # Reloads
 bind = $mod SHIFT, w, exec, killall $top_bar && $top_bar
