--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,14 +8,16 @@ $active_border_col		= rgb(5a0fa6) rgb(400180) rgb(cc121e) rgb(ad0a15)
 $inactive_border_col	= rgb(595959)
 
 # Startup
-exec-once = dbus-update-activation-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = light -I
-exec-once = mako
-exec-once = gentoo-pipewire-launcher
-exec-once = $top_bar
-exec-once = ~/.config/hypr/wallpaper_cli
-exec-once = ~/.config/hypr/animate_border "$active_border_col"
-exec-once = ~/.config/hypr/audio
+exec-once = dbus-update-activation-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP	# Export the needed variables for screensharing
+exec-once = light -I														# Restore screen brightness level
+exec-once = mako															# Start notification daemon
+exec-once = gentoo-pipewire-launcher										# Start pipewire and wireplumber
+exec-once = /usr/libexec/xdg-desktop-portal -r				# I know that isn't a good idea to manually start xdpw but I need to do it
+exec-once = /usr/libexec/xdg-desktop-portal-hyprland -r	# I know that isn't a good idea to manually start xdpw but I need to do it
+exec-once = $top_bar														# Start topbar (waybar)
+exec-once = ~/.config/hypr/wallpaper_cli									# Start script to manage wallpapers
+exec-once = ~/.config/hypr/animate_border "$active_border_col"				# Start script to animate window border
+exec-once = ~/.config/hypr/audio											# Start script to limit audio
 
 # Monitor
 monitor=,preferred,auto,1
@@ -49,7 +51,7 @@ decoration {
     multisample_edges 		= true
 
     # Blur
-	blur 					= true
+	blur 					= false
     blur_size 				= 5
     blur_passes 			= 1
     blur_new_optimizations 	= on
@@ -106,8 +108,9 @@ bind = ,XF86MonBrightnessDown, exec, light -U 10 && light -O && notify-send -t 6
 # Music (script)
 bind = $mod,XF86AudioPlay, exec, notify-send -t 600 "$(music info)"
 bind = ,XF86AudioPlay, exec, music pause
-bind = ,XF86AudioNext, exec, music advance
-bind = ,XF86AudioPrev, exec, music return
+bind = ,XF86AudioNext, exec, music advance 5
+bind = ,XF86AudioPrev, exec, music back 5
+bind = $mod SHIFT, Y, exec, music play 'https://www.youtube.com/watch?v=9yGGNohmAT0' && music seek 132
 
 # Volume
 bind = ,XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5% && notify-send -t 600 "Audio: $(pactl get-sink-volume @DEFAULT_SINK@ | awk '{print $5}')"
