--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -2,22 +2,24 @@
 $mod 					= SUPER
 $term					= kitty
 $top_bar 				= waybar
-$launcher				= bemenu-run
+$launcher				= PATH=$PATH:/home/waltz/.local/bin bemenu-run
 $lock_screen			= swaylock --daemonize --fade-in 5 --screenshots --effect-blur 3x1 --indicator --clock --inside-color 5a0fa6 --inside-clear-color 5a0fa6 --layout-bg-color 5a0fa6 --key-hl-color 5a0fa6 --text-color ffffff --text-clear-color ffffff --ring-color 000000 --ring-clear-color 000000
 $active_border_col		= rgb(5a0fa6) rgb(400180) rgb(cc121e) rgb(ad0a15)
 $inactive_border_col	= rgb(595959)
 
-# Startup
-exec-once = dbus-update-activation-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP	# Export the needed variables for screensharing
+# Setup screensharing
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+#exec-once = /usr/libexec/xdg-desktop-portal-hyprland -r &
+#exec-once = /usr/lib/xdg-desktop-portal -r &
+
+# Start
 exec-once = light -I														# Restore screen brightness level
-exec-once = mako															# Start notification daemon
-exec-once = gentoo-pipewire-launcher										# Start pipewire and wireplumber
-exec-once = /usr/libexec/xdg-desktop-portal -r				# I know that isn't a good idea to manually start xdpw but I need to do it
-exec-once = /usr/libexec/xdg-desktop-portal-hyprland -r	# I know that isn't a good idea to manually start xdpw but I need to do it
-exec-once = $top_bar														# Start topbar (waybar)
-exec-once = ~/.config/hypr/wallpaper_cli									# Start script to manage wallpapers
-exec-once = ~/.config/hypr/animate_border "$active_border_col"				# Start script to animate window border
-exec-once = ~/.config/hypr/audio											# Start script to limit audio
+exec-once = mako &															# Start notification daemon
+exec-once = $top_bar &														# Start topbar (waybar)
+exec-once = ~/git/dotfiles/scripts/wallpaper_cli &									# Start script to manage wallpapers
+exec-once = ~/git/dotfiles/scripts/animate_border "$active_border_col" &				# Start script to animate window border
+exec-once = ~/git/dotfiles/scripts/audio &											# Start script to limit audio
 
 # Monitor
 monitor=,preferred,auto,1
@@ -51,10 +53,11 @@ decoration {
     multisample_edges 		= true
 
     # Blur
-	blur 					= false
+	blur 					= true
     blur_size 				= 5
     blur_passes 			= 1
-    blur_new_optimizations 	= on
+	blur_xray				= true
+    blur_new_optimizations 	= true
 
     # Shadows
     drop_shadow 			= yes
@@ -65,6 +68,11 @@ decoration {
 
 # Blur waybar
 blurls = waybar
+
+misc {
+	# Enable vfr (lower refresh rate when nothing is hapenning on the screen)
+	no_vfr = true
+}
 
 # Animations
 animations {
@@ -78,7 +86,7 @@ animations {
 	animation = fadeOut, 1, 7, default
 
 	# Border
-    animation = border, 1, 30, default
+    animation = border, 1, 20, default
 
 	# Workspaces
     animation = workspaces, 1, 3, default, slide
@@ -99,7 +107,7 @@ bind	= $mod SHIFT, l, exec, $lock_screen
 bind = $mod, T, exec, $term
 bind = $mod, Return, exec, $launcher
 bind = $mod SHIFT, Q, killactive
-bind = $mod SHIFT, E, exit
+bind = $mod SHIFT CTRL, E, exit
 
 # Control screen brightness
 bind = ,XF86MonBrightnessUp,   exec, light -A 10 && light -O && notify-send -t 600 "Bright: $(light -G)"
@@ -124,10 +132,13 @@ bind = $mod, XF86AudioLowerVolume, exec, pactl set-source-volume @DEFAULT_SOURCE
 bind = ,XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle && notify-send -t 600 "Audio muted: $(pactl get-sink-mute @DEFAULT_SINK@ | awk '{print $2}')"
 bind = $mod,XF86AudioMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle && notify-send -t 600 "Microphone muted: $(pactl get-source-mute @DEFAULT_SOURCE@ | awk '{print $2}')"
 
+# Discord toggle deafen
+#bind = CTRL SHIFT, d, pass,^(Discord)$
+
 # Reloads
 bind = $mod SHIFT, w, exec, killall $top_bar && $top_bar
-bind = $mod SHIFT, w, exec, ~/.config/hypr/wallpaper_cli clipboard
-bind = $mod SHIFT, w, exec, ~/.config/hypr/animate_border "$active_border_col"
+bind = $mod SHIFT, w, exec, ~/git/dotfiles/scripts/wallpaper_cli clipboard
+bind = $mod SHIFT, w, exec, ~/git/dotfiles/scripts/animate_border "$active_border_col"
 
 # Screenshot
 bind = $mod, p, exec, grim - | wl-copy -t image/png
@@ -191,3 +202,8 @@ bind = $mod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mod, mouse:272, movewindow
 bindm = $mod, mouse:273, resizewindow
+
+debug {
+	# Set damage-tracking
+	damage_tracking = 2
+}
