--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,9 @@
 # Disable warning when closing window
 confirm_os_window_close 0
 
+# Disable SFX
+enable_audio_bell no
+
 # BG Opacity
 background_opacity 0.5
 
