--- a/waybar/config
+++ b/waybar/config
@@ -21,30 +21,29 @@
 
     // Custom/bar: Clock
     "custom/clock": {
-		"exec": "/home/waltz/.config/waybar/bar.sh clock",
+		"exec": "/home/waltz/git/dotfiles/scripts/bar clock",
     },
 
     // Custom/bar: Calendar
     "custom/calendar": {
-		"exec": "/home/waltz/.config/waybar/bar.sh calendar",
+		"exec": "/home/waltz/git/dotfiles/scripts/bar  calendar",
     },
 
     // Custom/bar: Battery
     "custom/battery": {
-		"exec": "/home/waltz/.config/waybar/bar.sh battery",
+		"exec": "/home/waltz/git/dotfiles/scripts/bar  battery",
     },
 
     // Custom/bar: Temperature
     "custom/temperature": {
-		"exec": "/home/waltz/.config/waybar/bar.sh temperature",
+		"exec": "/home/waltz/git/dotfiles/scripts/bar  temperature",
     },
 
     // Custom/bar: Music
 	"custom/music": {
-		"exec": "/home/waltz/.config/waybar/bar.sh music",
+		"exec": "/home/waltz/git/dotfiles/scripts/bar  music",
 		"on-click": "music pause",
     },
-
 
 	//  Wlroots workspaces
 	"wlr/workspaces": {
