--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,25 +1,44 @@
-# Variables
+# __          __   _ _       _       _    _                  _                 _    _____             __ _       
+# \ \        / /  | | |     ( )     | |  | |                | |               | |  / ____|           / _(_)      
+#  \ \  /\  / /_ _| | |_ ___|/ ___  | |__| |_   _ _ __  _ __| | __ _ _ __   __| | | |     ___  _ __ | |_ _  __ _ 
+#   \ \/  \/ / _` | | __|_  / / __| |  __  | | | | '_ \| '__| |/ _` | '_ \ / _` | | |    / _ \| '_ \|  _| |/ _` |
+#    \  /\  / (_| | | |_ / /  \__ \ | |  | | |_| | |_) | |  | | (_| | | | | (_| | | |___| (_) | | | | | | | (_| |
+#     \/  \/ \__,_|_|\__/___| |___/ |_|  |_|\__, | .__/|_|  |_|\__,_|_| |_|\__,_|  \_____\___/|_| |_|_| |_|\__, |
+#                                            __/ | |                                                        __/ | 
+#                                           |___/|_|                                                       |___/  
+###################################################################################################################
+
+# Keys
 $mod 					= SUPER
+
+# Applications
 $term					= kitty
 $top_bar 				= waybar
-$launcher				= PATH=$PATH:/home/waltz/.local/bin bemenu-run
+$launcher				= bemenu-run
+
+# Commands
 $lock_screen			= swaylock --daemonize --fade-in 5 --screenshots --effect-blur 3x1 --indicator --clock --inside-color 5a0fa6 --inside-clear-color 5a0fa6 --layout-bg-color 5a0fa6 --key-hl-color 5a0fa6 --text-color ffffff --text-clear-color ffffff --ring-color 000000 --ring-clear-color 000000
+
+# Window borders
 $active_border_col		= rgb(5a0fa6) rgb(400180) rgb(cc121e) rgb(ad0a15)
 $inactive_border_col	= rgb(595959)
 
+# Scripts
+$wallpaper_cli = ~/.local/src/dotfiles/scripts/wallpaper_cli
+$animate_border = ~/.local/src/dotfiles/scripts/animate_border
+$audio = ~/.local/src/dotfiles/scripts/audio
+
 # Setup screensharing
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-#exec-once = /usr/libexec/xdg-desktop-portal-hyprland -r &
-#exec-once = /usr/lib/xdg-desktop-portal -r &
+#exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+#exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 # Start
-exec-once = light -I														# Restore screen brightness level
-exec-once = mako &															# Start notification daemon
-exec-once = $top_bar &														# Start topbar (waybar)
-exec-once = ~/git/dotfiles/scripts/wallpaper_cli &									# Start script to manage wallpapers
-exec-once = ~/git/dotfiles/scripts/animate_border "$active_border_col" &				# Start script to animate window border
-exec-once = ~/git/dotfiles/scripts/audio &											# Start script to limit audio
+exec-once = light -I &									# Restore screen brightness level
+exec-once = mako &										# Start notification daemon
+exec-once = $top_bar & 									# Start topbar (waybar)
+exec-once = $wallpaper_cli & 							# Start script to manage wallpapers
+exec-once = $animate_border "$active_border_col" & 		# Start script to animate window border
+exec-once = $audio & 									# Start script to setup audio
 
 # Monitor
 monitor=,preferred,auto,1
@@ -71,7 +90,23 @@ blurls = waybar
 
 misc {
 	# Enable vfr (lower refresh rate when nothing is hapenning on the screen)
-	no_vfr = true
+	vfr = true
+
+    # Adptative sync
+    vrr = 1
+
+    # Animate window resizing
+    animate_manual_resizes = true
+
+    # Enable widnow swallowing
+    enable_swallow = true
+
+    # Direct scanout attempts to reduce lag when there is only
+    # one full scren application on the window (can give issues)
+    no_direct_scanout = false
+
+    # (buggy) try to reduce delay rendering before the monitor
+    render_ahead_of_time = false
 }
 
 # Animations
@@ -136,9 +171,10 @@ bind = $mod,XF86AudioMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle &
 #bind = CTRL SHIFT, d, pass,^(Discord)$
 
 # Reloads
-bind = $mod SHIFT, w, exec, killall $top_bar && $top_bar
-bind = $mod SHIFT, w, exec, ~/git/dotfiles/scripts/wallpaper_cli clipboard
-bind = $mod SHIFT, w, exec, ~/git/dotfiles/scripts/animate_border "$active_border_col"
+bind = $mod SHIFT, w, exec, killall $top_bar && $top_bar &
+bind = $mod SHIFT, w, exec, $wallpaper_cli clipboard &
+bind = $mod SHIFT, w, exec, $audio &
+bind = $mod SHIFT, w, exec, $animate_border "$active_border_col" &
 
 # Screenshot
 bind = $mod, p, exec, grim - | wl-copy -t image/png
