--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -14,7 +14,7 @@ $mod 					= SUPER
 # Applications
 $term					= kitty
 $top_bar 				= waybar
-$launcher				= bemenu-run
+$launcher				= tofi-run
 
 # Commands
 $lock_screen			= swaylock --daemonize --fade-in 5 --screenshots --effect-blur 3x1 --indicator --clock --inside-color 5a0fa6 --inside-clear-color 5a0fa6 --layout-bg-color 5a0fa6 --key-hl-color 5a0fa6 --text-color ffffff --text-clear-color ffffff --ring-color 000000 --ring-clear-color 000000
@@ -27,10 +27,6 @@ $inactive_border_col	= rgb(595959)
 $wallpaper_cli = ~/.local/src/dotfiles/scripts/wallpaper_cli
 $animate_border = ~/.local/src/dotfiles/scripts/animate_border
 $audio = ~/.local/src/dotfiles/scripts/audio
-
-# Setup screensharing
-#exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-#exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 # Start
 exec-once = light -I &									# Restore screen brightness level
@@ -72,11 +68,13 @@ decoration {
     multisample_edges 		= true
 
     # Blur
-	blur 					= true
-    blur_size 				= 5
-    blur_passes 			= 1
-	blur_xray				= true
-    blur_new_optimizations 	= true
+    blur {
+        enabled 			= true
+        size 				= 5
+        passes 			    = 1
+        xray				= true
+        new_optimizations 	= true
+    }
 
     # Shadows
     drop_shadow 			= yes
@@ -85,8 +83,9 @@ decoration {
     col.shadow 				= rgba(1a1a1aee)
 }
 
-# Blur waybar
-blurls = waybar
+# Blur layers
+layerrule = blur,waybar
+layerrule = blur,launcher
 
 misc {
 	# Enable vfr (lower refresh rate when nothing is hapenning on the screen)
@@ -167,9 +166,6 @@ bind = $mod, XF86AudioLowerVolume, exec, pactl set-source-volume @DEFAULT_SOURCE
 bind = ,XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle && notify-send -t 600 "Audio muted: $(pactl get-sink-mute @DEFAULT_SINK@ | awk '{print $2}')"
 bind = $mod,XF86AudioMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle && notify-send -t 600 "Microphone muted: $(pactl get-source-mute @DEFAULT_SOURCE@ | awk '{print $2}')"
 
-# Discord toggle deafen
-#bind = CTRL SHIFT, d, pass,^(Discord)$
-
 # Reloads
 bind = $mod SHIFT, w, exec, killall $top_bar && $top_bar &
 bind = $mod SHIFT, w, exec, $wallpaper_cli clipboard &
@@ -240,6 +236,10 @@ bindm = $mod, mouse:272, movewindow
 bindm = $mod, mouse:273, resizewindow
 
 debug {
-	# Set damage-tracking
 	damage_tracking = 2
 }
+
+misc {
+	force_hypr_chan = true
+}
+
