Update dotfiles part 2

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,10 +14,10 @@ $mod 					= SUPER
 # Applications
 $term					= kitty
 $top_bar 				= waybar
-$launcher				= tofi-run
+$launcher				= tofi-drun
 
 # Commands
-$lock_screen			= swaylock --daemonize --fade-in 5 --screenshots --effect-blur 3x1 --indicator --clock --inside-color 5a0fa6 --inside-clear-color 5a0fa6 --layout-bg-color 5a0fa6 --key-hl-color 5a0fa6 --text-color ffffff --text-clear-color ffffff --ring-color 000000 --ring-clear-color 000000
+$lock_screen			= swaylock --daemonize --screenshot --effect-blur 3x1 --indicator --clock --inside-color 5a0fa6 --inside-clear-color 5a0fa6 --layout-bg-color 5a0fa6 --key-hl-color 5a0fa --text-color ffffff --text-clear-color ffffff --ring-color 000000 --ring-clear-color 000000
 
 # Window borders
 $active_border_col		= rgb(5a0fa6) rgb(400180) rgb(cc121e) rgb(ad0a15)
@@ -132,6 +132,9 @@ dwindle {
 	force_split			= 2
 	no_gaps_when_only 	= false
 }
+
+# Mute discord
+#bind ,ctrl,shift,d,pass,^(discord\-screenaudio)$
 
 # Lock screen
 bindl	= , switch:Lid Switch, exec, $lock_screen
