--- a/.config/hypr/wallpaper_cli.conf
+++ b/.config/hypr/wallpaper_cli.conf
@@ -1,2 +1,2 @@
-preload = /home/waltz/wallpapers/JJK/satoru-gojo3.png
-wallpaper = eDP-1,/home/waltz/wallpapers/JJK/satoru-gojo3.png
+preload = /home/waltz/wallpapers/JJK/satoru-gojo.jpg
+wallpaper = eDP-1,/home/waltz/wallpapers/JJK/satoru-gojo.jpg
