--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,6 +28,13 @@ $wallpaper_cli = ~/.local/src/dotfiles/scripts/wallpaper_cli
 $animate_border = ~/.local/src/dotfiles/scripts/animate_border
 $audio = ~/.local/src/dotfiles/scripts/audio
 
+# Predefined commands
+$notify-low = notify-send -u low -t 600
+$set-source-volume = pactl set-source-volume @DEFAULT_SOURCE@
+$set-sink-volume = pactl set-sink-volume @DEFAULT_SINK@
+$mute-sink = pactl set-sink-mute @DEFAULT_SINK@ toggle
+$mute-source = pactl set-source-mute @DEFAULT_SOURCE@ toggle
+
 # Start
 exec-once = light -I &									# Restore screen brightness level
 exec-once = mako &										# Start notification daemon
@@ -147,8 +154,8 @@ bind = $mod SHIFT, Q, killactive
 bind = $mod SHIFT CTRL, E, exit
 
 # Control screen brightness
-bind = ,XF86MonBrightnessUp,   exec, light -A 10 && light -O && notify-send -t 600 "Bright: $(light -G)"
-bind = ,XF86MonBrightnessDown, exec, light -U 10 && light -O && notify-send -t 600 "Bright: $(light -G)"
+bind = ,XF86MonBrightnessUp,   exec, light -A 10 && light -O && $notify-low "Bright: $(light -G)"
+bind = ,XF86MonBrightnessDown, exec, light -U 10 && light -O && $notify-low "Bright: $(light -G)"
 
 # Music (script)
 bind = $mod,XF86AudioPlay, exec, notify-send -t 600 "$(music info)"
@@ -158,16 +165,16 @@ bind = ,XF86AudioPrev, exec, music back 5
 bind = $mod SHIFT, Y, exec, music play 'https://www.youtube.com/watch?v=9yGGNohmAT0' && music seek 132
 
 # Volume
-bind = ,XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5% && notify-send -t 600 "Audio: $(pactl get-sink-volume @DEFAULT_SINK@ | awk '{print $5}')"
-bind = ,XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5% && notify-send -t 600 "Audio: $(pactl get-sink-volume @DEFAULT_SINK@ | awk '{print $5}')"
+bind = ,XF86AudioRaiseVolume, exec, $set-sink-volume +5% && $notify-low "Audio: $(pactl get-sink-volume @DEFAULT_SINK@ | awk '{print $5}')"
+bind = ,XF86AudioLowerVolume, exec, $set-sink-volume -5% && $notify-low "Audio: $(pactl get-sink-volume @DEFAULT_SINK@ | awk '{print $5}')"
 
 # Microphone volume
-bind = $mod, XF86AudioRaiseVolume, exec, pactl set-source-volume @DEFAULT_SOURCE@ +5% && notify-send -t 600 "Microphone: $(pactl get-source-volume @DEFAULT_SOURCE@ | awk '{print $5}')"
-bind = $mod, XF86AudioLowerVolume, exec, pactl set-source-volume @DEFAULT_SOURCE@ -5% && notify-send -t 600 "Microphone: $(pactl get-source-volume @DEFAULT_SOURCE@ | awk '{print $5}')"
+bind = $mod, XF86AudioRaiseVolume, exec, $set-source-volume +5% && $notify-low "Microphone: $(pactl get-source-volume @DEFAULT_SOURCE@ | awk '{print $5}')"
+bind = $mod, XF86AudioLowerVolume, exec, $set-source-volume -5% && $notify-low "Microphone: $(pactl get-source-volume @DEFAULT_SOURCE@ | awk '{print $5}')"
 
 # Togle Audio | Mic
-bind = ,XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle && notify-send -t 600 "Audio muted: $(pactl get-sink-mute @DEFAULT_SINK@ | awk '{print $2}')"
-bind = $mod,XF86AudioMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle && notify-send -t 600 "Microphone muted: $(pactl get-source-mute @DEFAULT_SOURCE@ | awk '{print $2}')"
+bind = ,XF86AudioMute, exec, $mute-sink && $notify-low "Audio muted: $(pactl get-sink-mute @DEFAULT_SINK@ | awk '{print $2}')"
+bind = $mod,XF86AudioMute, exec, $mute-source && $notify-low "Microphone muted: $(pactl get-source-mute @DEFAULT_SOURCE@ | awk '{print $2}')"
 
 # Reloads
 bind = $mod SHIFT, w, exec, killall $top_bar && $top_bar &
